# boids

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: boid.hpp  boids.hpp  flock.hpp
src/: CMakeLists.txt  boid.cpp  boids.cpp  flock.cpp
